--- a/index.html
+++ b/index.html
@@ -45,7 +45,20 @@
         <button type="submit" value="Enviar">Pegele</button>
     </form>
 
+    <table border>
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>nombre</th>
+                <th>edad</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody id="myTabla">
 
+        </tbody>
+
+    </table>
 
 
     
