--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <form id="myInformacion" action="asds.com" method="get">
         <input type="text" name="nombre" placeholder="ingrese su nombre">
         <input type="number" name="edad" placeholder="ingrese su edad">
-        <input type="checkbox" name="teacher"><label for="">Ud es un tipazo "teacher"</label>
+        <input type="checkbox" name="teacher" unchecked><label for="">Ud es un tipazo "teacher"</label>
         <button type="submit" value="Enviar">Pegele</button>
     </form>
 
@@ -51,7 +51,7 @@
                 <th>#</th>
                 <th>nombre</th>
                 <th>edad</th>
-                <th></th>
+                <th>checkbox</th>
             </tr>
         </thead>
         <tbody id="myTabla">
